fit: html nft-card

--- a/index.html
+++ b/index.html
@@ -13,6 +13,29 @@
   </head>
 
   <body>
-    
+    <section>
+      <main id="nft-card">
+        <div id="nft-img">
+          <img src="./assest/images/image-equilibrium.jpg" alt="a">
+        </div>
+        <h1>Equilibrium #3429</h1>
+        <p>Our Equilibrium collection promotes balance and calm.</p>
+        <div id="price-days">
+          <div class="price">
+            0.041 ETH
+          </div>
+
+          <div class="days">
+            3 days left
+          </div>
+        </div>
+        <div class="creator">
+          <div class="creator-img">
+            <img src="./assest/images/image-avatar.png" alt="image of Jules Wyvern">
+          </div>
+          <span>Creation of <a href="#">Jules Wyvern</a></span>
+        </div>
+      </main>
+    </section>
   </body>
 </html>
