fit:transform and activate states

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="nft-img">
           <img src="./assest/images/image-equilibrium.jpg" alt="a">
         </div>
-        <h1>Equilibrium #3429</h1>
+        <h1><a href="#">Equilibrium #3429</a></h1>
         <p>Our Equilibrium collection promotes balance and calm.</p>
         <div id="price-days">
           <div class="price">
